# GDAL-ZARR-EOPF

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  COMPULSORY_DOCKER_FILES.md  CONTRIBUTING.md  DEVELOPER.md  DOCKER-README.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.repo  GETTING_STARTED.md  HOW_TO_GET_PLUGIN.md  INSTALLATION.md  INSTALLATION_SCRIPTS_README.md  ISSUE-geolocation-arrays.md  LICENSE  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  SECURITY.md  TEST_CHECKLIST.md  TROUBLESHOOTING.md  USAGE.md  USAGE_EXAMPLES.md  build-and-install-macos.sh  build-and-install.ps1  build-and-install.sh  build-docker.sh  build-for-github-release.ps1  build_and_install_dynamic.sh  cleanup.sh  dev-env.sh  docker-compose.separate-repo.yml  docker-compose.yml  docker-entrypoint.sh  environment.yml  (+19 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  test-user-report.md
.github/workflows/: branch-protection.yml  build.yml  ci-cd.yml  ci-light.yml  ci.yml  docker-publish.yml  dockerhub-publish.yml  integration-tests-only.yml  main.yml
build-refactored/: CMakeCache.txt  DartConfiguration.tcl
build_github_actions/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  EOPFZarr.sln  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gdal_EOPFZarr.vcxproj  gdal_EOPFZarr.vcxproj.filters
build_github_actions/include/: eopfzarr_config.h
docker-images/eopfzarr-jupyterhub/: Dockerfile
docker-images/eopfzarr-qgis/: Dockerfile  README.md
docs/: README.md  __Current Capabilities of the GDAL Zarr Driver__.md  api.md  architecture.md  benchmarks.md  faq.md  installation.md  project-structure.md  troubleshooting.md  user-guide.md  windows-installation.md  zarr driver development in gdal.md  zarr_gdal_roadmap.md  zarr_v3_spec.md
include/: EOPFDataset.h  EOPFRasterBand.h  EOPFZarr.h  eopf_metadata.h  eopf_zarr.h  eopfzarr_performance.h
markdown/: __Current Capabilities of the GDAL Zarr Driver__.md  zarr_gdal_roadmap.md
notebooks/: 01-Basic-Functionality-Demo.ipynb  02-Remote-Data-Access-Demo.ipynb  03-EOPF-Zarr-Test.ipynb  04-Explore_sentinel2_EOPFZARR.ipynb  06-Data-Visualization.ipynb  07-Sentinel-3-OLCI-Level-1-EFR.ipynb  08-EOPFZARR-with-Rioxarray.ipynb  09-EOPFZARR-with-Rasterio.ipynb  11-Sentinel-1-GRD-Demo.ipynb  12-Sentinel-1-GRD-MultiBand-Demo.ipynb  13-Sentinel-1-SLC-Burst-Selection.ipynb  14-Sentinel-1-GRD-Geolocation-Verification.ipynb  EOPF-Zarr-Test.ipynb  Explore_sentinel2_EOPFZARR.ipynb  README.md  check_zarr_gdal.ipynb  eopf_zarr_python_integration.ipynb  read_zarr_gdal.ipynb  visualize_zarr.ipynb
src/: EOPFDataset.cpp  EOPFDataset.h  EOPFDriver.cpp  EOPFRasterBand.cpp  EOPFRasterBand.h  eopf_metadata.cpp  eopf_metadata.h  eopfzarr_cleanup_manager.h  eopfzarr_config.h.in  eopfzarr_dataset.cpp  eopfzarr_dataset.h  eopfzarr_driver.cpp  eopfzarr_driver_original_backup.cpp  eopfzarr_driver_refactored.cpp  eopfzarr_errors.cpp  eopfzarr_errors.h  eopfzarr_opener.cpp  eopfzarr_opener.h  eopfzarr_path_utils.cpp  eopfzarr_path_utils.h  eopfzarr_performance.cpp  eopfzarr_registry.cpp  eopfzarr_registry.h
tests/: CMakeLists.txt  README.md  generate_test_data.py  manual_test_issue_135.py  requirements.txt  test_basic_functionality.cpp  test_bbox_ordering_unit.cpp  test_compatibility.cpp  test_driver_integration.cpp  test_eopf_driver.cpp  test_gdal_basic.cpp  test_geolocation_arrays.cpp  test_implementation.cpp  test_path_parsing.cpp  test_path_parsing_unit.cpp  test_performance.cpp  test_real_data_integration.cpp  test_sample_data_structure.cpp  test_sentinel2_hierarchy.cpp  test_skeleton.cpp  test_subdataset_formats.cpp  test_urls.py  test_utils.h  test_zarr_read.cpp
tests/data/: README.md
tests/data/georeferenced.zarr/: .zattrs
tests/data/georeferenced.zarr/data/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/data/georeferenced.zarr/x/: .zarray  .zattrs  0
tests/data/georeferenced.zarr/y/: .zattrs  0
tests/data/performance_test.zarr/: .zattrs
tests/data/performance_test.zarr/band_1/: .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3
tests/data/performance_test.zarr/band_2/: .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3
tests/data/performance_test.zarr/band_3/: .zarray  .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3
tests/data/performance_test.zarr/band_4/: .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3
tests/data/sample.zarr/: .zattrs
tests/data/sample.zarr/data/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/data/with_metadata.zarr/: .zattrs
tests/data/with_metadata.zarr/quality/data/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/data/with_metadata.zarr/reflectance/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/data/with_subdatasets.zarr/: .zattrs
tests/data/with_subdatasets.zarr/band1/data/: .zattrs  0.0  0.1  1.0  1.1
tests/data/with_subdatasets.zarr/band2/data/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/data/with_subdatasets.zarr/metadata/: .zattrs
tests/integration/: conftest.py  test_bbox_ordering_and_utm.py  test_eopf_zarr_rioxarray.py  test_eopfzarr_integration.py  test_gcp_extraction.py  test_geocoding_via_gcps.py  test_grd_multiband.py  test_metadata_extraction.py  test_rasterio_eopfzarr_improved.py  test_rasterio_eopfzarr_integration.py  test_rioxarray_eopfzarr_integration.py  test_rioxarray_simple.py  test_sentinel3_validation.py  test_slc_burst_selection.py
tests/python/: test_eopfzarr.py
tests/sample_data/: .zattrs  .zmetadata
